# ai-forge

./: .gitignore  .markdownlint-cli2.yaml  .markdownlint.json  .pre-commit-config.yaml  .skillmark.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  SKILLS.md  SKILL_GUIDELINES.md  lola-market.yml  pyproject.toml
.agents/skills/check-skill-spec/: SKILL.md
.agents/skills/pr-contributor-review/: SKILL.md
.agents/skills/pr-new/: SKILL.md
.github/: CODEOWNERS  SECURITY.md  config.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: lint.yml  update-skills-index.yml  validate.yml
ansible-collection/: README.md
ansible-collection-sdlc/: README.md
ansible-collection-sdlc/module/: AGENTS.md
ansible-collection-sdlc/module/commands/: setup-python-venv.md  validate-workflows.md
ansible-collection/module/: AGENTS.md
ansible-content-development/: README.md
ansible-content-development/module/: AGENTS.md
ansible-role/: README.md
ansible-role/module/: AGENTS.md
changelogs/fragments/: 10-add-stable-release-workflow.yml  12-aws-terminator-skills.yml  add-security-scan-and-agent-patterns.yml  ansible-content-development.yml
cloud_content/: README.md
docs/adrs/: ADR-001-tox-developer-orchestration.md
scripts/: check_command_frontmatter.py  check_manifest_skills.py  check_mcps_json.py  check_module_structure.py  check_skill_frontmatter.py
tmp/: CLAUDE.md  README.md
tmp/.claude-plugin/: marketplace.json
tmp/resources/: zen-of-ansible.txt
tmp/scripts/: gen-marketplace.js
(+77 files in other folders)
